@@ -1,5 +1,5 @@
 //wordpress theme info
-@import "info.css"
+@import "info.scss"
 
 //compass libraries
 @import "compass/css3"
